--- a/draft.tex
+++ b/draft.tex
@@ -123,84 +123,52 @@ Assuming $\ve \sim \text{Logistic} \ (0,1)$, the probability that legislator $z$
 
 For ease of exposition, for now take $i \in \left\{ -\frac{1}{2}, 0, \frac{1}{2} \right\}$. Then $Y_B = \frac{\beta}{2} - \alpha - a_{-\frac{1}{2}} + b_{-\frac{1}{2}}$, $X_B = -\alpha - a_0+ b_0$ and $Z_B = -\frac{\beta}{2} - \alpha - a_{\frac{1}{2}} + b_{\frac{1}{2}}\label{page:sh}$ represent the net ideal points in terms of $B$'s probability of winning the issue. We can then write the probability that each of the legislators, respectively, votes against the new proposal as $\frac{1}{1+e^{-Y_B}}$, $\frac{1}{1+e^{-X_B}}$ and $\frac{1}{1+e^{-Z_B}}$.
 
-Vote Buyer $A$ must take into account that Vote Buyer $B$ will react to her choice of bribes. So the net ideal points from her point of view---that is, in terms of her winning the issue---are $X_A = \alpha - b_0(\bm{a},W_B,\al,\beta) + a_0$, $Y_A = -\frac{\beta}{2} + \alpha - b_{-.5}\left(\bm{a},W_B,\al,\beta\right)+ a_{-.5}$, and $Z_A = \frac{\beta}{2} + \alpha - b_{.5}\left(\bm{a},W_B,\al,\beta\right)+ a_{.5}$. We can then write the probability that each of the legislators votes for the new proposal as $\frac{1}{1+e^{-Y_A}}$, $\frac{1}{1+e^{-X_A}}$ and $\frac{1}{1+e^{-Z_A}}$.
+Vote Buyer $A$ must take into account that Vote Buyer $B$ will react to her choice of bribes. So the net ideal points from her point of view---that is, in terms of her winning the issue---are $X_A = \alpha - b_0(\bm{a},W_B,\al,\beta) + a_0$, $Y_A = -\frac{\beta}{2} + \alpha - b_{-.5}\left(\bm{a},W_B,\al,\beta\right)+ a_{-.5}$, and $Z_A = \frac{\beta}{2} + \alpha - b_{.5}\left(\bm{a},W_B,\al,\beta\right)+ a_{.5}$ with $\bm a = \left(a_{-.5},a_0,a_{.5} \right)$. We can then write the probability that each of the legislators votes for the new proposal as $\frac{1}{1+e^{-Y_A}}$, $\frac{1}{1+e^{-X_A}}$ and $\frac{1}{1+e^{-Z_A}}$.
 				
 
+\subsection{Vote Buyer B}
+Groseclose and Snyder (1996) assume that the objective of each vote buyer is to ``minimize total bribes paid while passing his preferred policy.'' This has to be adapted out our environment with uncertainty about legislators' ideal points. The appropriate analog is that vote buyers maximize the expected value of winning the vote net of bribes that he/she must pay. Note that in order to maximize the probability of winning a majority in a three-seat legislature, one must maximize the probability of at least two legislators voting with you. The case of Vote Buyer $B$, this is the probability that at least two legislators vote in favor of the status quo: $\Pr(S \geq 2)$ where $S = X\left(-\frac{1}{2}\right) + X\left(0\right) + X\left(\frac{1}{2}\right)$.
 
-
-\begin{enumerate}
-\item Vote buyer B
-		\begin{itemize}
-			\item GS assumption on vote buyers' objective is ``each prefers to minimize total bribes paid while passing his preferred policy, but each would prefer to concede the issue rather than pay more than his WTP''; this has to be adapted to our situation with uncertainty
-			\item With asymmetric $v(z)$ or WTP parameters, it would be easy to get equilibria where only $A$ or $B$ buys votes. But we also have lots of outcomes where both buy votes.
-			\item They can easily both have positive probability of winning. But what do we need for this to be an equilibrium in this three stage game?
-			\item Uncertainty buys us a lot: no longer this knife edge condition of $A$ pushing to the point that $B$ buys no votes
-			\item Note the non-negativity constraint means you can't extract money from a legislator who is past the FOC point in order to reallocate to another legislator
-			\item Some legislators who are past FOC point will not be lobbied		
-			\item Need to max probability of at least two voting ``no'': $\Pr(S \geq 2)$ where $S = X\left(-\frac{1}{2}\right) + X\left(0\right) + X\left(\frac{1}{2}\right)$
-			\item Thus, maximization problem for Vote Buyer B (in absence of Vote Buyer A) is
+This means that the maximization problem for Vote Buyer B (in absence of Vote Buyer A) is
 			  \begin{multline}
-			    \max_{b\left(-\frac{1}{2}\right), b\left(0\right), b\left(\frac{1}{2}\right)} 
+			    \max_{b_{-\frac{1}{2}}, b_0, b_{\frac{1}{2}}} 
 					W_B \biggl[ \Pr\left(X\left(-\frac{1}{2}\right)=1\right)\Pr\left(X\left(0\right)=1\right)\left(X\left(\frac{1}{2}\right)=0\right)  + \\
 					\Pr\left(X\left(-\frac{1}{2}\right)=1\right)\Pr\left(X\left(0\right)=0\right)\Pr\left(X\left(\frac{1}{2}\right)=1\right) + \\
 					\Pr\left(X\left(-\frac{1}{2}\right)=0\right)\Pr\left(X\left(0\right)=1\right)\Pr\left(X\left(\frac{1}{2}\right)=1\right) + \\
-					\Pr\left(X\left(-\frac{1}{2}\right)=1\right)\Pr\left(X\left(0\right)=1\right)\Pr\left(X\left(\frac{1}{2}\right)=1\right) \biggr] - \sum_{j\in \left\{-\frac{1}{2}, 0,\frac{1}{2}\right\}} b(j)
+					\Pr\left(X\left(-\frac{1}{2}\right)=1\right)\Pr\left(X\left(0\right)=1\right)\Pr\left(X\left(\frac{1}{2}\right)=1\right) \biggr] - \sum_{j\in \left\{-\frac{1}{2}, 0,\frac{1}{2}\right\}} b_j
 				\end{multline}
 			Substituting from the definition of $X$,
 			  \begin{multline}
-			    \max_{b\left(-\frac{1}{2}\right), b\left(0\right), b\left(\frac{1}{2}\right)} 
+			    \max_{b_{-\frac{1}{2}}, b_0, b_{\frac{1}{2}}} 
 					W_B \biggl[ \frac{1}{1+e^{-Z}} \frac{1}{1+e^{-X}} \left(1-\frac{1}{1+e^{-Y}}\right)  + \\
 					\frac{1}{1+e^{-Z}} \left(1-\frac{1}{1+e^{-X}}\right) \frac{1}{1+e^{-Y}} + \\
 					\left(1-\frac{1}{1+e^{-Z}} \right) \frac{1}{1+e^{-X}} \frac{1}{1+e^{-Y}} + \\
-					\frac{1}{1+e^{-Z}} \frac{1}{1+e^{-X}} \frac{1}{1+e^{-Y}} \biggr] - \sum_{j\in \left\{-\frac{1}{2}, 0,\frac{1}{2}\right\}} b(j)
+					\frac{1}{1+e^{-Z}} \frac{1}{1+e^{-X}} \frac{1}{1+e^{-Y}} \biggr] - \sum_{j\in \left\{-\frac{1}{2}, 0,\frac{1}{2}\right\}} b_j
 				\end{multline}
 			This can be simplified as 
 			  \begin{multline}
-			    \max_{b\left(-\frac{1}{2}\right), b\left(0\right), b\left(\frac{1}{2}\right)} 
+			    \max_{b_{-\frac{1}{2}}, b_0, b_{\frac{1}{2}}} 
 					W_B \biggl[ \frac{1}{1+e^{-X}} \frac{1}{1+e^{-Y}} +
 					\frac{1}{1+e^{-X}} \frac{1}{1+e^{-Z}} + \\
-					\frac{1}{1+e^{-Y}} \frac{1}{1+e^{-Z}} - 2	\frac{1}{1+e^{-Z}} \frac{1}{1+e^{-X}} \frac{1}{1+e^{-Y}} \biggr] - \sum_{j\in \left\{-\frac{1}{2}, 0,\frac{1}{2}\right\}} b(j)
+					\frac{1}{1+e^{-Y}} \frac{1}{1+e^{-Z}} - 2	\frac{1}{1+e^{-Z}} \frac{1}{1+e^{-X}} \frac{1}{1+e^{-Y}} \biggr] - \sum_{j\in \left\{-\frac{1}{2}, 0,\frac{1}{2}\right\}} b_j
 					\label{eq:objb}
 				\end{multline}
-				
-			The FOC wrt to $b\left(\frac{1}{2}\right)$ is 
-				\begin{equation}
-					W_B \biggl[ \left( \frac{1}{1+e^{-X}} + \frac{1}{1+e^{-Y}} - 2 \frac{1}{1+e^{-X}} \frac{1}{1+e^{-Y}} \right) \frac{e^{-Z}}{\left[1+e^{-Z}\right]^2} \biggr]  = 1
-				\end{equation}
-			Simplifying:
-				\begin{equation}
-					W_B \biggl[ \frac{e^{-X} + e^{-Y}}{\left(1+e^{-X}\right)\left(1+e^{-Y}\right)} \frac{e^{-Z}}{\left[1+e^{-Z}\right]^2} \biggr]  = 1
-					\label{eq:logistic}
-				\end{equation}
-			\item If we divide through by 2, the left side is the average minus the product
-			\item Remember, I'm ignoring the constraints on WTP and non-negativity of bribes
-		\end{itemize}
-	\item Vote Buyer A
-		\begin{itemize}
-			\item Vote buyer A's objective function is identical in form to that of Vote buyer B (Expression~\ref{eq:objb}) 
+		
+\subsection{Vote Buyer A}
+Vote buyer A's objective function is identical in form to that of Vote buyer B (Expression~\ref{eq:objb}) 
 			  \begin{multline}
-			    \max_{a\left(-\frac{1}{2}\right), a\left(0\right), a\left(\frac{1}{2}\right)} 
+			    \max_{a_{-\frac{1}{2}}, a_0, a_{\frac{1}{2}}} 
 					W_A \biggl[ \frac{1}{1+e^{-X_A}} \frac{1}{1+e^{-Y_A}} +
 					\frac{1}{1+e^{-X_A}} \frac{1}{1+e^{-Z_A}} + \\
-					\frac{1}{1+e^{-Y_A}} \frac{1}{1+e^{-Z_A}} - 2	\frac{1}{1+e^{-Z_A}} \frac{1}{1+e^{-X_A}} \frac{1}{1+e^{-Y_A}} \biggr] - \sum_{j\in \left\{-\frac{1}{2}, 0,\frac{1}{2}\right\}} a(j)
+					\frac{1}{1+e^{-Y_A}} \frac{1}{1+e^{-Z_A}} - 2	\frac{1}{1+e^{-Z_A}} \frac{1}{1+e^{-X_A}} \frac{1}{1+e^{-Y_A}} \biggr] - \sum_{j\in \left\{-\frac{1}{2}, 0,\frac{1}{2}\right\}} a_j .
 					\label{eq:obja}
 				\end{multline}
-				where 
-				\begin{enumerate}
-					\item $X_A = \alpha - b_0(\bm{a},W_B,\al,\beta) + a_0$ 
-					\item $Y_A = -\frac{\beta}{2} + \alpha - b_{-.5}\left(\bm{a},W_B,\al,\beta\right)+ a_{-.5}$
-					\item $Z_A = \frac{\beta}{2} + \alpha - b_{.5}\left(\bm{a},W_B,\al,\beta\right)+ a_{.5}$
-				\end{enumerate}
-				with $\bm a = \left(a_{-.5},a_0,a_{.5} \right)$
-			\item Vote Buyer A's first order condition with respect to $a_0$ is more complicated because of the dependencies on $\bm a$ (should probably double check this, but it makes sense)
-			 \begin{multline}
-					 \frac{e^{-X} + e^{-Z}}{\left(1+e^{-X}\right)\left(1+e^{-Z}\right)} \frac{e^{-Y}}{\left[1+e^{-Y}\right]^2} \frac{\partial b_{-.5}}{\partial a_0} + \\ 
-					\frac{e^{-X} + e^{-Y}}{\left(1+e^{-X}\right)\left(1+e^{-Y}\right)} \frac{e^{-Z}}{\left[1+e^{-Z}\right]^2}\frac{\partial b_{.5}}{\partial a_0} + \\
-					\frac{2+e^{-Y} + e^{-Z}}{\left(1+e^{-Y}\right)\left(1+e^{-Z}\right)} \frac{e^{-X}}{\left[1+e^{-X}\right]^2}\left[1 - \frac{\partial b_0}{\partial a_0} \right] = \frac{1}{W_A}
-					\label{eq:focA}
-				\end{multline}
-		\end{itemize}
-\end{enumerate}
+
+However, strategically Vote Buyer A is more complex because of the dependence of Vote Buyer $B$'s bids on her own.
+				
+
+
+
 
 	
 
@@ -365,6 +333,24 @@ In a legislature with three voters, Vote Buyer $B$ can choose to bribe all three
 \end{proposition}
 
 All proofs are in the Appendix.
+
+\begin{itemize}
+				\item With asymmetric $v(z)$ or WTP parameters, it would be easy to get equilibria where only $A$ or $B$ buys votes. But we also have lots of outcomes where both buy votes.
+			\item They can easily both have positive probability of winning. But what do we need for this to be an equilibrium in this three stage game?
+			\item Uncertainty buys us a lot: no longer this knife edge condition of $A$ pushing to the point that $B$ buys no votes
+			\item Note the non-negativity constraint means you can't extract money from a legislator who is past the FOC point in order to reallocate to another legislator
+			\item Some legislators who are past FOC point will not be lobbied		
+
+\end{itemize}
+
+\vskip.5in
+Vote Buyer A's first order condition with respect to $a_0$ is more complicated because of the dependencies on $\bm a$ (should probably double check this, but it makes sense)
+			 \begin{multline}
+					 \frac{e^{-X} + e^{-Z}}{\left(1+e^{-X}\right)\left(1+e^{-Z}\right)} \frac{e^{-Y}}{\left[1+e^{-Y}\right]^2} \frac{\partial b_{-.5}}{\partial a_0} + \\ 
+					\frac{e^{-X} + e^{-Y}}{\left(1+e^{-X}\right)\left(1+e^{-Y}\right)} \frac{e^{-Z}}{\left[1+e^{-Z}\right]^2}\frac{\partial b_{.5}}{\partial a_0} + \\
+					\frac{2+e^{-Y} + e^{-Z}}{\left(1+e^{-Y}\right)\left(1+e^{-Z}\right)} \frac{e^{-X}}{\left[1+e^{-X}\right]^2}\left[1 - \frac{\partial b_0}{\partial a_0} \right] = \frac{1}{W_A}
+					\label{eq:focA}
+				\end{multline}
 
 \section{Estimating Legislative Uncertainty}
 \label{sec:est}
