--- a/draft.tex
+++ b/draft.tex
@@ -173,11 +173,11 @@ However, strategically Vote Buyer A is more complex because of the dependence of
 	
 
 
-\subsection{Adding Non-negativity Constraints for Bribes}
+\subsection{Non-negativity Constraints for Bribes}
 \label{sec:nonneg}
-The Lagrangian for the problem is the same as Expression~\ref{eq:objb}, adding on $\lambda_X b\left(0\right) + \lambda_Y b\left(-\frac{1}{2}\right) + \lambda_Z b\left(\frac{1}{2}\right)$
+It is not possible for a Vote Buyer to extract money from a legislator who is more favorably-inclined toward him than is optimal. This means that there are non-negativity constraints on all bribes. 
 
-The full set of FOCs (in logistic form) is then:
+The Lagrangian for the problem is the same as Expression~\ref{eq:objb}, with the addition of three terms for the non-negativity constraints: $\lambda_X b_0 + \lambda_Y b_{-\frac{1}{2}} + \lambda_Z b_{\frac{1}{2}}$. Thus the full set of first order conditions are
 \[
     W_B\frac{e^{-X}}{\left(1+e^{-X}\right)^2}\left[\frac{e^{-Z} + e^{-Y}}{\left(1+e^{-Z}\right)\left(1+e^{-Y}\right)} \right] - 1 + \lambda_X = 0
 \]
@@ -196,17 +196,7 @@ The full set of FOCs (in logistic form) is then:
 \[
   \lambda_X \cdot b\left(0\right) = 0 \hskip.2in \lambda_Y \cdot b\left(-\frac{1}{2}\right) = 0 \hskip.2in \lambda_Z \cdot b\left(\frac{1}{2}\right) = 0 
 \]
-There are 8 patterns of positive and zero components in the 3-dimensional vector of bribes, $b' = \left(b\left(0\right),b\left(\frac{1}{2}\right), b\left(-\frac{1}{2}\right)\right)$. \\
 
-Note that the complementary slackness condition implies that either a bribe is zero, \un{or} its multiplier is zero (or both).
-
-\vskip.5in
-Simulations show that for many sets of parameters, $b\left(0\right)$ and $b\left(\frac{1}{2}\right)$ are positive while $b\left(-\frac{1}{2}\right) = 0$.
-\begin{itemize}
-	\item Then $Y = \frac{\beta}{2} - \alpha + b\left(-\frac{1}{2}\right) = \frac{\beta}{2} - \alpha $
-	\item $\lambda_Y$ is likely positive
-	\item $\lambda_X = \lambda_Z = 0$
-\end{itemize}
 
 
 \subsection{Parameterizing Uncertainty to Vary by Legislator}
